# SDK-Emulator-Diagnostic-Shell

./: .gitignore  Boost-Target-release.cmake  Boost-release-x86_64-data.cmake  CMakeLists.txt  FindGTest.cmake  GTest-release-x86_64-data.cmake  LICENSE  OpenSSL-release-x86_64-data.cmake  README.md  ZLIB-release-x86_64-data.cmake  conan_toolchain.cmake  conandeps_legacy.cmake  conanfile.txt  conanrunenv-release-x86_64.bat  httplib-Target-release.cmake  httplib-config-version.cmake  httplib-config.cmake  httplib-release-x86_64-data.cmake  module-OpenSSL-release-x86_64-data.cmake  nlohmann_json-release-x86_64-data.cmake  websocketpp-Target-release.cmake  websocketpp-release-x86_64-data.cmake
src/: CMakeLists.txt  main.cpp
src/sdk/: adc.cpp  adc.hpp  device_profile.hpp  gpio.cpp  gpio.hpp  interrupt.hpp  logger.hpp  uart.cpp  uart.hpp
src/shell/: cli_manager.cpp  cli_manager.hpp  command_parser.cpp  command_parser.hpp  history_manager.cpp  history_manager.hpp
src/web/: dashboard.cpp  dashboard.hpp
tests/: CMakeLists.txt  gpio_test.cpp
